.debug/atomic-blend/templates/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: atomic-blend
      app.kubernetes.io/instance: backend
  template:
    metadata:
      labels:
        helm.sh/chart: atomic-blend-0.1.0
        app.kubernetes.io/name: atomic-blend
        app.kubernetes.io/instance: backend
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - image: ghcr.io/atomic-blend/backend:1.0.0
          
          
          # security context
          
          imagePullPolicy: IfNotPresent
          livenessProbe:
            null
          name: backend
      imagePullSecrets:
        []
