.debug/atomic-blend/templates/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    helm.sh/chart: atomic-blend-0.1.0
    app.kubernetes.io/name: atomic-blend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: atomic-blend
    app.kubernetes.io/instance: backend
